# lccfq-backend

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-tests.yml
config/: config_example.toml
etc/slurm/: gres.conf  slurm.conf
src/lccfq_backend/: config.py  main.py
src/lccfq_backend/api/: client.py  grpc_server.py
src/lccfq_backend/api/certificates/: __init__.py  certificate_manager.py
src/lccfq_backend/api/protobufs_compiled/: qpu_service_pb2.py  qpu_service_pb2_grpc.py
src/lccfq_backend/api/protos/: qpu_service.proto
src/lccfq_backend/api/services/: __init__.py  executor_service.py
src/lccfq_backend/backend/: error.py  executor.py  fsm.py  hwman.py  hwman_client.py  queue.py  result_store.py
src/lccfq_backend/certificates/: __init__.py
src/lccfq_backend/config/: metrics.py
src/lccfq_backend/daemon/: watchdog.py
src/lccfq_backend/logging/: logger.py
src/lccfq_backend/metrics/: prometheus.py
src/lccfq_backend/model/: context.py  observables.py  qpu_state.py  results.py  state.py  tasks.py
src/lccfq_backend/slurm/: exporter.py
src/lccfq_backend/utils/: log.py
src/scripts/: install_services.sh  install_watchdog.sh  lccfq-backend.service  lccfq-qpu-watchdog.service
src/tests/backend/: executor_test.py  fsm_test.py  hwman_client_test.py  observables_test.py  queue_test.py
src/tests/daemon/: watchdog_test.py
src/tests/logging/: logger_test.py
src/tests/model/: state_machine_test.py
src/tests/slurm/: exporter_test.py
