[project]
name = "lccfq-backend"
version = "0.1.0"
description = "LCCFQ Backend Service"
authors = [{name = "Santiago Nunez-Corrales", email = "nunezco2@illinois.edu"}]
requires-python = ">=3.12"
readme = "README.md"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]