[project]
name = "lccfq-backend"
version = "0.1.0"
description = "LCCFQ Backend Service"
authors = [{name = "Santiago Nunez-Corrales", email = "nunezco2@illinois.edu"}]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["*_test.py"]
addopts = "-ra"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pydantic = "^2.11.7"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "mypy", "ruff"]
